Added def layout

--- a/frontend/FrontendApp/src/styles.css
+++ b/frontend/FrontendApp/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+}
+
+html,
+body,
+app-root {
+    height: 100%;
+    margin: 0;
+}
