--- a/frontend/FrontendApp/src/app/app.component.css
+++ b/frontend/FrontendApp/src/app/app.component.css
@@ -1,4 +1,16 @@
 .navbar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     min-height: 40px;
-    background-color: #2967c4
+    background-color: #2967c4;
+    padding: 0 1% 0 1%;
+    box-shadow: 0 5px 5px rgba(90, 90, 90, 0.4);
+}
+
+.content {
+    display: flex;
+    margin: 1%;
+    flex: 1 0 auto;
+    justify-content: space-evenly;
 }
