--- a/frontend/FrontendApp/src/styles.css
+++ b/frontend/FrontendApp/src/styles.css
@@ -11,3 +11,9 @@ app-root {
     height: 100%;
     margin: 0;
 }
+
+body, app-root {
+    display: flex;
+    flex-direction: column;
+    min-width: 320px;
+}
