--- a/frontend/FrontendApp/src/app/app.component.css
+++ b/frontend/FrontendApp/src/app/app.component.css
@@ -1,4 +1,16 @@
 .navbar {
-    min-height: 40px;
-    background-color: #2967c4
+    height: 40px;
+    background-color: #2967c4;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 1%;
+    box-sizing: border-box;
+}
+
+.content {
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 1%;
 }
