--- a/frontend/FrontendApp/src/app/app.component.html
+++ b/frontend/FrontendApp/src/app/app.component.html
@@ -4,10 +4,6 @@
 
 
 <div class="content">
-    CONENT
+    CONTENT
     <router-outlet></router-outlet>
-</div>
-
-<div class="footer">
-    FOOTER
 </div>
