Added first iteration of getting tasks in tables, fixed some css stuff

--- a/frontend/FrontendApp/src/app/tables/table/table.component.css
+++ b/frontend/FrontendApp/src/app/tables/table/table.component.css
@@ -1,5 +1,15 @@
 .table {
   min-width: 320px;
-  height: 600px;
   background-color: burlywood;
+  display: flex;
+  flex-direction: column;
+}
+
+.table-content {
+  flex: 1;
+}
+
+
+.item-margin {
+  margin: 5px 5px;
 }
