--- a/frontend/FrontendApp/src/app/tables/tablesview/tablesview.component.css
+++ b/frontend/FrontendApp/src/app/tables/tablesview/tablesview.component.css
@@ -12,10 +12,13 @@
     overflow: auto;
     overflow-y: hidden;
     user-select: none;
+    padding-bottom: 10px;
 }
 
 .singleTable {
   margin-right: 10px;
+  cursor: pointer;
+  margin-bottom: auto;
 }
 
 ::-webkit-scrollbar {
@@ -37,7 +40,7 @@
   }
   
   .cdk-drag-preview {
-    box-sizing: border-box;
+    height: inherit;
     border-radius: 4px;
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
                 0 8px 10px 1px rgba(0, 0, 0, 0.14),
