--- a/frontend/FrontendApp/src/app/tables/tablesview/tablesview.component.html
+++ b/frontend/FrontendApp/src/app/tables/tablesview/tablesview.component.html
@@ -1,9 +1,10 @@
 <div class="tables-controls">
-        <Button>XD</Button>
+    <Button>XD</Button>
 </div>
 <div class="tables" cdkDropList cdkDropListOrientation="horizontal" (cdkDropListDropped)="drop($event)">
     <div class="singleTable" *ngFor="let table of tables; let i = index" cdkDrag>
-        <app-table id="{{'draggableTable-'+i}}" [tableInfo]="table"></app-table>
+        <div cdkDropListGroup>
+            <app-table [tableInfo]="table" [connectedLists]="dropListNames"></app-table>
+        </div>
     </div>
 </div>
-
