--- a/frontend/FrontendApp/src/app/tables/table/table.component.html
+++ b/frontend/FrontendApp/src/app/tables/table/table.component.html
@@ -7,7 +7,7 @@
             {{item.title}}, {{item.description}}
         </div>
     </div>
-    <div class="table-controls item-margin">
+    <div class="table-controls item-margin" (click)="addNewTask()">
         Add new task
     </div>
 </div>
