Removed debug prints, added passing data for cdkDropList

--- a/frontend/FrontendApp/src/app/tables/table/table.component.html
+++ b/frontend/FrontendApp/src/app/tables/table/table.component.html
@@ -3,7 +3,7 @@
         {{tableInfo.name}}
     </div>
     <div class="table-content item-margin" id="task-list{{tableInfo.id}}" cdkDropList cdkDropListOrientation="vertical" (cdkDropListDropped)="drop($event)" [cdkDropListConnectedTo]="connectedLists" [cdkDropListData]="res">
-        <div *ngFor="let item of res" style="margin-bottom: 5px; border: 2px solid black; padding: 5px" cdkDrag>
+        <div *ngFor="let item of res" style="margin-bottom: 5px; border: 2px solid black; padding: 5px" cdkDrag [cdkDragData]="item">
             {{item.title}}, {{item.description}}
         </div>
     </div>
