--- a/frontend/FrontendApp/src/styles.css
+++ b/frontend/FrontendApp/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/cdk/overlay-prebuilt.css';
 
 * {
     font-family: 'Roboto', sans-serif;
@@ -17,5 +18,8 @@ app-root {
     display: flex;
     flex-direction: column;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
