Added placeholder styling for task creation component

--- a/frontend/FrontendApp/src/app/tasks/task-create/task-create.component.html
+++ b/frontend/FrontendApp/src/app/tasks/task-create/task-create.component.html
@@ -1,1 +1,11 @@
-<p>task-create works!</p>
+<div class="window">
+    <div class="window-title">
+        CREATE NEW TASK IN TABLE: {{table.name}}
+    </div>
+    <div class="window-content">
+        asdfaerb
+    </div>
+    <div class="window-controls">
+        <button (click)="createTask()" class="createButton">CREATE</button>
+    </div>
+</div>
