--- a/frontend/FrontendApp/src/app/tables/tablesview/tablesview.component.html
+++ b/frontend/FrontendApp/src/app/tables/tablesview/tablesview.component.html
@@ -1,5 +1,5 @@
 <div class="tables-controls">
-    <Button class="button">XD</Button>
+    <Button class="button" (click)="addNewTable()">XD</Button>
 </div>
 <div class="tables" cdkDropList cdkDropListOrientation="horizontal" (cdkDropListDropped)="drop($event)">
     <div class="singleTable" *ngFor="let table of tables; let i = index" cdkDrag>
