Added tmp table removing still needs to reload view

--- a/frontend/FrontendApp/src/app/tables/table/table.component.html
+++ b/frontend/FrontendApp/src/app/tables/table/table.component.html
@@ -1,6 +1,9 @@
 <div class="table">
     <div class="table-name item-margin">
         {{tableInfo.name}}
+        <div class="table-remove" (click)="removeTable()">
+            REMOVE DA TABLE!
+        </div>
     </div>
     <div class="table-content item-margin" id="{{tableInfo.id}}" cdkDropList cdkDropListOrientation="vertical" (cdkDropListDropped)="drop($event, tableInfo)" [cdkDropListConnectedTo]="connectedLists" [cdkDropListData]="res">
         <div class="table-item item-margin" *ngFor="let task of res" cdkDrag [cdkDragData]="task">
