--- a/frontend/FrontendApp/src/app/tables/table-create/table-create.component.css
+++ b/frontend/FrontendApp/src/app/tables/table-create/table-create.component.css
@@ -1,7 +1,7 @@
 .window {
     height: 60vh;
     width: 60vw;
-    background-color: cornsilk;
+    background-color: rgb(255, 251, 239);
     border-radius: 10px;
     user-select: none;
     display: flex;
@@ -14,31 +14,26 @@
 }
 
 .window-content {
-    flex: 1;
+    margin: 5%;
+    flex: 1; 
 }
 
 .window-controls {
     margin-left: auto;
     justify-self: end;
-    padding: 5%;
+    float: right;
 }
 
-.mat-spinner circle {
-    stroke: #ffffff;
-  }
-
-.createButton {
-    background-color:#59d179;
-    color:#ffffff;
-}
-.createButton:hover {
-	background-color:#5cbf2a;
-}
-.createButton:active {
-	position:relative;
-	top:1px;
+.create-button {
+    background-color: #59d179;
+    color: #ffffff;
 }
 
-.createButton:focus {
-    outline: 0;
+textarea {
+    resize: none !important;
+    min-height: 150px;
+}
+
+.input-field--size {
+    width: 100%;
 }
