--- a/frontend/FrontendApp/src/app/tables/table-create/table-create.component.html
+++ b/frontend/FrontendApp/src/app/tables/table-create/table-create.component.html
@@ -1,8 +1,8 @@
 <div class="window">
-    <div class="window-title">
+    <div class="window__title">
         Create new table
     </div>
-    <div class="window-content">
+    <div class="window__content">
         <form (ngSubmit)="createEntity(taskForm)" #taskForm="ngForm">
             <mat-form-field class="input-field--size">
                 <input matInput name="tableName" ngModel required minlength="3" placeholder="Table name" autocomplete="off">
@@ -10,7 +10,7 @@
             <mat-form-field class="input-field--size">
                 <textarea matInput name="tableDescription" ngModel placeholder="Table description"></textarea>
             </mat-form-field>
-            <div class="window-controls">
+            <div class="window__controls">
                 <button mat-button class="create-button" [disabled]="!taskForm.valid">CREATE</button>
             </div>
         </form>
