--- a/frontend/FrontendApp/src/app/tables/table/table.component.html
+++ b/frontend/FrontendApp/src/app/tables/table/table.component.html
@@ -1,16 +1,20 @@
 <div class="table">
     <div class="table-name item-margin">
         {{tableInfo.name}}
-        <div class="table-remove" (click)="removeTable()">
-            REMOVE DA TABLE!
-        </div>
     </div>
-    <div class="table-content item-margin" id="{{tableInfo.id}}" cdkDropList cdkDropListOrientation="vertical" (cdkDropListDropped)="drop($event, tableInfo)" [cdkDropListConnectedTo]="connectedLists" [cdkDropListData]="res">
+    <div class="table-content item-margin" id="{{tableInfo.id}}" cdkDropList cdkDropListOrientation="vertical"
+        (cdkDropListDropped)="drop($event, tableInfo)" [cdkDropListConnectedTo]="connectedLists"
+        [cdkDropListData]="res">
         <div class="table-item item-margin" *ngFor="let task of res" cdkDrag [cdkDragData]="task">
             <app-task [task]="task"></app-task>
         </div>
     </div>
-    <div class="table-controls item-margin" (click)="addNewTask()">
-        Add new task
+    <div class="table-controls item-margin">
+        <div class="table-controls__new-task" (click)="addNewTask()">
+            Add new task
+        </div>
+        <div class="table-controls__remove-table" (click)="removeTable()">
+            <mat-icon aria-hidden="false" aria-label="Example home icon" matTooltip="Delete table">remove_circle_outline</mat-icon>
+        </div>
     </div>
 </div>
