--- a/frontend/FrontendApp/src/app/tables/tablesview/tablesview.component.css
+++ b/frontend/FrontendApp/src/app/tables/tablesview/tablesview.component.css
@@ -14,7 +14,7 @@
     padding-bottom: 10px;
 }
 
-.singleTable {
+.single-table {
   margin-right: 10px;
   cursor: pointer;
   margin-bottom: auto;
@@ -53,6 +53,10 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
-  .tables.cdk-drop-list-dragging .singleTable:not(.cdk-drag-placeholder) {
+  .tables.cdk-drop-list-dragging .single-table:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+
+  .new-table-button--color {
+    background-color: #fdc381;
   }
