--- a/frontend/FrontendApp/src/app/tables/table/table.component.html
+++ b/frontend/FrontendApp/src/app/tables/table/table.component.html
@@ -10,11 +10,11 @@
         </div>
     </div>
     <div class="table-controls item-margin">
-        <div class="table-controls__new-task" (click)="addNewTask()">
+        <div class="table-controls__new-task" (click)="addNewTask()" matTooltip="Add new task">
             Add new task
         </div>
         <div class="table-controls__remove-table" (click)="removeTable()">
-            <mat-icon aria-hidden="false" aria-label="Example home icon" matTooltip="Delete table">remove_circle_outline</mat-icon>
+            <mat-icon aria-hidden="false" aria-label="delete table icon" matTooltip="Delete table" class="mat-icon-delete">remove_circle_outline</mat-icon>
         </div>
     </div>
 </div>
