--- a/frontend/FrontendApp/src/app/tables/table/table.component.css
+++ b/frontend/FrontendApp/src/app/tables/table/table.component.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 5px;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.36);
 }
 
 .table-content {
