--- a/frontend/FrontendApp/src/app/app.component.css
+++ b/frontend/FrontendApp/src/app/app.component.css
@@ -1,6 +1,6 @@
 .navbar {
     height: 40px;
-    background-color: #fdc381;
+    background-color: #2dabff;
     display: flex;
     flex-direction: row;
     align-items: center;
