--- a/frontend/FrontendApp/src/app/tables/table-create/table-create.component.css
+++ b/frontend/FrontendApp/src/app/tables/table-create/table-create.component.css
@@ -1,7 +1,7 @@
 .window {
     height: 60vh;
     width: 60vw;
-    background-color: rgb(255, 251, 239);
+    background-color: #ebebeb;
     border-radius: 10px;
     user-select: none;
     display: flex;
